Regression: VSE Speed control - animating multiply factor on video strips crashe blender #99133

Closed
opened 2022-06-24 14:25:12 +02:00 by Behe eddine · 10 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.96

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-20 22:42, hash: a18c291435

Caused by 7afcfe111a

Short description of error
so when i put a 60 fps video strip in a 24 FPS scene in the vse and use the speed control with the multiply mode and put a keyframe even if the value of multiplication is one blender just crashes
this happened when i was trying to replicate this bug https://developer.blender.org/T99092
so maybe they are related

Exact steps for others to reproduce the error
vse change the multiply value crash.7z
just open the file and put a keyframe in the multiply value

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.96 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-06-20 22:42, hash: `a18c291435` Caused by 7afcfe111a **Short description of error** so when i put a 60 fps video strip in a 24 FPS scene in the vse and use the speed control with the multiply mode and put a keyframe even if the value of multiplication is one blender just crashes this happened when i was trying to replicate this bug https://developer.blender.org/T99092 so maybe they are related **Exact steps for others to reproduce the error** [vse change the multiply value crash.7z](https://archive.blender.org/developer/F13223722/vse_change_the_multiply_value_crash.7z) just open the file and put a keyframe in the multiply value
Author

Added subscriber: @BEHE

Added subscriber: @BEHE
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member
* thread #1, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x30)
  * frame #0: 0x0000000003ce9a41 blender`seq_speed_effect_target_frame_get(scene=0x00007fffdb545808, seq_speed=0x00007fffdb599948, timeline_frame=13, input=0) at effects.c:2669:24
    frame #1: 0x0000000003d0a68d blender`seq_render_effect_strip_impl(context=0x00007fffffffe360, state=0x00007fffffffdea8, seq=0x00007fffdb599948, timeline_frame=13) at render.c:820:32
    frame #2: 0x0000000003d07791 blender`do_render_strip_uncached(context=0x00007fffffffe360, state=0x00007fffffffdea8, seq=0x00007fffdb599948, timeline_frame=13, r_is_proxy_image=0x00007fffffffd977) at render.c:1668:14
    frame #3: 0x0000000003d074cc blender`seq_render_strip(context=0x00007fffffffe360, state=0x00007fffffffdea8, seq=0x00007fffdb599948, timeline_frame=13) at render.c:1734:12
    frame #4: 0x0000000003d08083 blender`seq_render_strip_stack(context=0x00007fffffffe360, state=0x00007fffffffdea8, channels=0x00007fffdb554e40, seqbasep=0x00007fffdb554e20, timeline_frame=13, chanshown=0) at render.c:1854:21
    frame #5: 0x0000000003d07da2 blender`SEQ_render_give_ibuf(context=0x00007fffffffe360, timeline_frame=13, chanshown=0) at render.c:1955:11
    frame #6: 0x00000000049cde51 blender`sequencer_ibuf_get(bmain=0x00007fffdb4ebc08, region=0x00007fffdb5964c8, depsgraph=0x00007fffdaf3ea08, scene=0x00007fffdb545808, sseq=0x00007fffdb588a88, timeline_frame=13, frame_ofs=0, viewname="left") at sequencer_draw.c:1590:12
    frame #7: 0x00000000049ce0ec blender`sequencer_draw_preview(C=0x00007ffff3f84388, scene=0x00007fffdb545808, region=0x00007fffdb5964c8, sseq=0x00007fffdb588a88, timeline_frame=13, offset=0, draw_overlay=false, draw_backdrop=false) at sequencer_draw.c:2205:10
    frame #8: 0x00000000049ec576 blender`sequencer_preview_region_draw(C=0x00007ffff3f84388, region=0x00007fffdb5964c8) at space_sequencer.c:817:5
    frame #9: 0x0000000003cbb024 blender`ED_region_do_draw(C=0x00007ffff3f84388, region=0x00007fffdb5964c8) at area.c:542:5
    frame #10: 0x0000000003274aa7 blender`wm_draw_window_offscreen(C=0x00007ffff3f84388, win=0x00007fffdb588188, stereo=false) at wm_draw.c:852:11
    frame #11: 0x0000000003273887 blender`wm_draw_window(C=0x00007ffff3f84388, win=0x00007fffdb588188) at wm_draw.c:1017:3
    frame #12: 0x00000000032734c7 blender`wm_draw_update(C=0x00007ffff3f84388) at wm_draw.c:1238:7
    frame #13: 0x000000000326f209 blender`WM_main(C=0x00007ffff3f84388) at wm.c:629:5
    frame #14: 0x0000000002a90fe9 blender`main(argc=2, argv=0x00007fffffffe988) at creator.c:547:5
    frame #15: 0x00007ffff7dba290 libc.so.6`__libc_start_call_main + 128
    frame #16: 0x00007ffff7dba34a libc.so.6`__libc_start_main@@GLIBC_2.34 + 138
    frame #17: 0x0000000002a90ba5 blender`_start + 37
``` * thread #1, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x30) * frame #0: 0x0000000003ce9a41 blender`seq_speed_effect_target_frame_get(scene=0x00007fffdb545808, seq_speed=0x00007fffdb599948, timeline_frame=13, input=0) at effects.c:2669:24 frame #1: 0x0000000003d0a68d blender`seq_render_effect_strip_impl(context=0x00007fffffffe360, state=0x00007fffffffdea8, seq=0x00007fffdb599948, timeline_frame=13) at render.c:820:32 frame #2: 0x0000000003d07791 blender`do_render_strip_uncached(context=0x00007fffffffe360, state=0x00007fffffffdea8, seq=0x00007fffdb599948, timeline_frame=13, r_is_proxy_image=0x00007fffffffd977) at render.c:1668:14 frame #3: 0x0000000003d074cc blender`seq_render_strip(context=0x00007fffffffe360, state=0x00007fffffffdea8, seq=0x00007fffdb599948, timeline_frame=13) at render.c:1734:12 frame #4: 0x0000000003d08083 blender`seq_render_strip_stack(context=0x00007fffffffe360, state=0x00007fffffffdea8, channels=0x00007fffdb554e40, seqbasep=0x00007fffdb554e20, timeline_frame=13, chanshown=0) at render.c:1854:21 frame #5: 0x0000000003d07da2 blender`SEQ_render_give_ibuf(context=0x00007fffffffe360, timeline_frame=13, chanshown=0) at render.c:1955:11 frame #6: 0x00000000049cde51 blender`sequencer_ibuf_get(bmain=0x00007fffdb4ebc08, region=0x00007fffdb5964c8, depsgraph=0x00007fffdaf3ea08, scene=0x00007fffdb545808, sseq=0x00007fffdb588a88, timeline_frame=13, frame_ofs=0, viewname="left") at sequencer_draw.c:1590:12 frame #7: 0x00000000049ce0ec blender`sequencer_draw_preview(C=0x00007ffff3f84388, scene=0x00007fffdb545808, region=0x00007fffdb5964c8, sseq=0x00007fffdb588a88, timeline_frame=13, offset=0, draw_overlay=false, draw_backdrop=false) at sequencer_draw.c:2205:10 frame #8: 0x00000000049ec576 blender`sequencer_preview_region_draw(C=0x00007ffff3f84388, region=0x00007fffdb5964c8) at space_sequencer.c:817:5 frame #9: 0x0000000003cbb024 blender`ED_region_do_draw(C=0x00007ffff3f84388, region=0x00007fffdb5964c8) at area.c:542:5 frame #10: 0x0000000003274aa7 blender`wm_draw_window_offscreen(C=0x00007ffff3f84388, win=0x00007fffdb588188, stereo=false) at wm_draw.c:852:11 frame #11: 0x0000000003273887 blender`wm_draw_window(C=0x00007ffff3f84388, win=0x00007fffdb588188) at wm_draw.c:1017:3 frame #12: 0x00000000032734c7 blender`wm_draw_update(C=0x00007ffff3f84388) at wm_draw.c:1238:7 frame #13: 0x000000000326f209 blender`WM_main(C=0x00007ffff3f84388) at wm.c:629:5 frame #14: 0x0000000002a90fe9 blender`main(argc=2, argv=0x00007fffffffe988) at creator.c:547:5 frame #15: 0x00007ffff7dba290 libc.so.6`__libc_start_call_main + 128 frame #16: 0x00007ffff7dba34a libc.so.6`__libc_start_main@@GLIBC_2.34 + 138 frame #17: 0x0000000002a90ba5 blender`_start + 37 ```
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

looks like a regression, will check

looks like a regression, will check
Member

Added subscriber: @iss

Added subscriber: @iss
Member

Caused by 7afcfe111a

Sequence->len gets 0 which seems to cause the crash, also note that files saved with this bug also crash previous blender versions it seems.

CC @iss

Caused by 7afcfe111a Sequence->len gets 0 which seems to cause the crash, also note that files saved with this bug also crash previous blender versions it seems. CC @iss
Philipp Oeser changed title from Speed control - animating multiply factor on video strips crashe blender to Regression: VSE Speed control - animating multiply factor on video strips crashe blender 2022-06-24 18:21:19 +02:00

This issue was referenced by 547efb6b1e

This issue was referenced by 547efb6b1e3414f1b696fb1975e0c49742a264dc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-06-30 15:32:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99133
No description provided.