Fix T99133:animating multiply factor on video strips crashes blender

Crash caused by `effect_seq->len` being 0, so frame map was not built.

Get length in timeline using handle positions.